# veridano-mcp-server

./: CONTRIBUTING.md  README.md  mcp_client.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: api-reference.md  performance.md  setup-guide.md  troubleshooting.md
examples/: basic-agent.py  threat-monitoring-agent.py
