[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "veridano-mcp-server"
version = "1.0.0"
description = "Cybersecurity Intelligence Platform MCP Server for AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Veridano Intelligence", email = "enterprise@veridano.com"}
]
keywords = ["cybersecurity", "intelligence", "mcp", "ai-agents", "government"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.8.0",
    "asyncio-mqtt>=0.16.0"
]

[project.urls]
Homepage = "https://github.com/Veridano/veridano-mcp-server"
Documentation = "https://github.com/Veridano/veridano-mcp-server/blob/main/docs/"
Repository = "https://github.com/Veridano/veridano-mcp-server"
Issues = "https://github.com/Veridano/veridano-mcp-server/issues"

[project.scripts]
veridano-mcp-server = "mcp_client:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_client.py"]